# repo2pipe

./: .gitignore  README.md  pyproject.toml  requirements.txt
archive/: cicd-compose-link  tests-repo-links.md
src/: cli.py  exception.py  model.py  settings.py  utils.py
src/core/: __init__.py  animation.py  ci_sctipts.py  config.py  core.py  models.py
src/core/renders/: gitlab.py  jenkins.py
src/core/services/: __init__.py
src/core/services/analyzer/: core.py
src/core/services/builders/: pipeline.py
src/core/services/git_module/: __init__.py  core.py  exceptions.py  models.py  utils.py
src/models/: schemas.py
